feat: first pass working
